syntax = "proto3";

package calculator;

option go_package = ".;calculator";

service CalculatorService {
    rpc Calculate (CalculationRequest) returns (CalculationResponse);
}

message Instruction {
    string type = 1;
    string op = 2;
    string var = 3;
    oneof left {
        int64 left_int = 4;
        string left_var = 5;
    }
    oneof right {
        int64 right_int = 6;
        string right_var = 7;
    }
}

message Result {
    string var = 1;
    int64 value = 2;
}

message CalculationRequest {
    repeated Instruction instructions = 1;
}

message CalculationResponse {
    repeated Result items = 1;
}